--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.cachecache">
+    package="com.mimi.cachecache">
 
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -15,7 +15,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name="com.mimi.cachecache.FindActivity"></activity>
+        <activity android:name="com.mimi.cachecache.HiddenUserActivity" />
+        <activity android:name="com.mimi.cachecache.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
