--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name="com.mimi.cachecache.FindActivity"></activity>
-        <activity android:name="com.mimi.cachecache.HiddenUserActivity" />
+        <activity android:name="com.mimi.cachecache.HideActivity" />
         <activity android:name="com.mimi.cachecache.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
